--- a/unit_testing/CMakeLists.txt
+++ b/unit_testing/CMakeLists.txt
@@ -1,7 +1,7 @@
 cmake_minimum_required(VERSION 2.8)
 project(caf_unit_tests_opencl CXX)
 
-if (OPENCL_LIBRARIES)
+if (OpenCL_LIBRARIES)
   add_custom_target(opencl_unit_tests)
   include_directories(${LIBCAF_INCLUDE_DIRS})
   macro(add_unit_test name)
@@ -10,7 +10,7 @@ if (OPENCL_LIBRARIES)
                           ${LD_FLAGS}
                           ${LIBCAF_LIBRARIES}
                           ${PTHREAD_LIBRARIES}
-                          ${OPENCL_LIBRARIES})
+                          ${OpenCL_LIBRARIES})
     add_test(${name} ${EXECUTABLE_OUTPUT_PATH}/test_${name})
     add_dependencies(test_${name} all_unit_tests)
   endmacro()
